# entropy_adaptation

./: .gitignore  README.md  adaptation_draft.md  annotate_DNAseq_all_pops.sh  annotate_adapt_vcf.sh  download_and_align_fastq.sh  download_and_align_fastq_DNA.sh  nonpython_install.sh  pyproject.toml  variant_calling_DNA.sh  variant_calling_DNA_earlier_timepoints.sh  variant_calling_abx_adapt.sh  variant_calling_abx_adapt_DNA.sh  variant_calling_drug_vs_ndc.sh
demos/: Adaptive_mutations.ipynb  Coverage_summary.ipynb  DNA_results.ipynb
demos/.ipynb_checkpoints/: Adaptive_mutations-checkpoint.ipynb  DNA_results-checkpoint.ipynb
demos/data/.ipynb_checkpoints/: T4_adapted_all_mutations-checkpoint.csv  T4_adapted_all_muts_filtered-checkpoint.csv
